--- a/style/style.css
+++ b/style/style.css
@@ -3,3 +3,25 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/* HEADER STYLING */
+
+
+header nav ul{
+    list-style-type: none;
+    margin-right: 1em;
+    display: flex;
+    justify-content: end;
+    gap: 1.5em;
+}
+
+header nav ul li a{
+background-color: white;
+padding: 1em;
+font-weight: bold;
+text-decoration: none;
+border: 1px solid black;
+border-radius: 50%;
+}
+
+/* MAIN STYLING */
