--- a/style/style.css
+++ b/style/style.css
@@ -4,18 +4,28 @@
     box-sizing: border-box;
 }
 
+body{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 /* HEADER STYLING */
 
+main nav{
+    margin: 1em 0;
+    z-index: 1;
+    position: fixed;
+    left: 80%;
+}
 
-header nav ul{
+main nav ul{
     list-style-type: none;
     margin-right: 1em;
     display: flex;
     justify-content: end;
     gap: 1.5em;
+    margin: 1em;
 }
 
-header nav ul li a{
+main nav ul li a{
 background-color: white;
 padding: 1em;
 font-weight: bold;
@@ -25,3 +35,44 @@ border-radius: 50%;
 }
 
 /* MAIN STYLING */
+
+main section{
+    height: 100vh;
+    position: relative;
+}
+
+.container{
+display: flex;
+flex-direction: column;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+}
+
+/* .container>img{
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+} */
+
+.container>p{
+    color: yellow;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 5em;
+    font-weight: 800;
+}
+.yellow>.container>p{
+    color: green;
+}
+.red{
+    background-color: red;
+}
+.green{
+    background-color: green;
+}
+.yellow{
+    background: yellow;
+}
